[gd_scene load_steps=9 format=3 uid="uid://km8adfwg4ees"]

[ext_resource type="Script" path="res://Menu/main_menu.gd" id="1_msky8"]
[ext_resource type="Texture2D" uid="uid://d02oa1thw743q" path="res://Menu/61c42001bb3b4648a4f3fcc05721cd37.webp" id="2_gpu1u"]
[ext_resource type="FontFile" uid="uid://cywl48n402gnl" path="res://common/Heavitas.ttf" id="3_btkkg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oy4rc"]
texture = ExtResource("2_gpu1u")
modulate_color = Color(0.60933, 0.60933, 0.60933, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lg4on"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlec4"]
bg_color = Color(0.823529, 0.823529, 0.823529, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjraw"]
bg_color = Color(0.635294, 0.635294, 0.635294, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kidxi"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_msky8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_oy4rc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.59
anchor_right = 0.501
anchor_bottom = 0.59
offset_left = -80.576
offset_top = -83.16
offset_right = 80.424
offset_bottom = 81.84
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_lg4on")
theme_override_styles/hover = SubResource("StyleBoxFlat_jlec4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bjraw")
theme_override_styles/normal = SubResource("StyleBoxFlat_kidxi")
text = "Start game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_lg4on")
theme_override_styles/hover = SubResource("StyleBoxFlat_jlec4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bjraw")
theme_override_styles/normal = SubResource("StyleBoxFlat_kidxi")
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_lg4on")
theme_override_styles/hover = SubResource("StyleBoxFlat_jlec4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bjraw")
theme_override_styles/normal = SubResource("StyleBoxFlat_kidxi")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -113.0
offset_right = 158.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.180005, 0.180005, 0.180005, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_btkkg")
theme_override_font_sizes/font_size = 28
text = "Frostbound Quest"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_pressed"]
